<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".YonetActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/Widget.AppCompat.Toolbar.Button.Navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:itemIconTint="@color/butonTextColor"

        app:itemTextColor="@color/butonTextColor"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_bar_menu">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <ImageView
        android:id="@+id/imageViewIcon"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:src="@drawable/ic_add_gray"
        app:layout_constraintBottom_toTopOf="@+id/editTextIsletmeName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/editTextIsletmeName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/IsletmeBilgilerIsletmeAdınızıGiriniz"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editTextSlogan"
        app:layout_constraintEnd_toEndOf="@+id/imageViewIcon"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/imageViewIcon"
        app:layout_constraintTop_toBottomOf="@+id/imageViewIcon" />

    <EditText
        android:id="@+id/editTextWeb"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/IsletmeBilgilerWebAdres"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editTextAdres"
        app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <EditText
        android:id="@+id/editTextSlogan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/IsletmeBilgilerIsletmeSloganınızıGiriniz"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editTextTel"
        app:layout_constraintEnd_toEndOf="@+id/editTextIsletmeName"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/editTextIsletmeName"
        app:layout_constraintTop_toBottomOf="@+id/editTextIsletmeName" />

    <Button
        android:id="@+id/buttonIsletmeBilgiKaydet"
        android:layout_width="212dp"
        android:layout_height="40dp"
        android:background="@drawable/buttonshape_3"
        android:text="@string/Kaydet"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAdres" />

    <EditText
        android:id="@+id/editTextTel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/IsletmeBilgilerTelefon"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextSlogan"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editTextSlogan"
        app:layout_constraintTop_toBottomOf="@+id/editTextSlogan" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/IsletmeBilgilerEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/editTextWeb"
        app:layout_constraintEnd_toEndOf="@+id/editTextTel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/editTextTel"
        app:layout_constraintTop_toBottomOf="@+id/editTextTel" />

    <EditText
        android:id="@+id/editTextAdres"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/IsletmeBilgilerAdres"
        android:inputType="textPostalAddress"
        app:layout_constraintBottom_toTopOf="@+id/buttonIsletmeBilgiKaydet"
        app:layout_constraintEnd_toEndOf="@+id/editTextWeb"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/editTextWeb"
        app:layout_constraintTop_toBottomOf="@+id/editTextWeb" />

</androidx.constraintlayout.widget.ConstraintLayout>